# cli-me

./: .gitignore  README.md  pyproject.toml
claude-memory-compiler/: .gitignore  AGENTS.md  README.md  pyproject.toml
claude-memory-compiler/hooks/: session-start.py
claude-memory-compiler/knowledge/: index.md  log.md
claude-memory-compiler/knowledge/concepts/: adversarial-review-system.md  agent-self-service-knowledge.md  article-formats.md  assertion-depth.md  bootstrap-problem.md  deterministic-before-llm.md  fresh-context-for-review.md  parallel-agent-research.md  qa-before-implementation.md  synthetic-fixture-trap.md  thin-wrapper-architecture.md  two-tier-knowledge-routing.md  version-divergence.md
claude-memory-compiler/knowledge/connections/: cost-reporting-in-subscription-contexts.md  cross-reviewer-consensus.md  interactive-prompts-in-agent-context.md  package-name-collisions-in-agent-context.md  url-rot-and-research-agents.md
claude-memory-compiler/knowledge/playbooks/: skill-build-process.md
claude-memory-compiler/scripts/: compile.py  config.py  flush.py  query.py  utils.py
cli_me/: __init__.py  filelock.py  installer.py  log.py  main.py  registry.py
docs/: skill-roadmap.md
qa/: _helpers.py  check_links.py  check_urls.py  conftest.py  r5_cache.py  test_check_links.py
qa/comfyui/: conftest.py  test_commands.py  test_custom_nodes_commands.py  test_custom_nodes_integration.py  test_integration.py  test_workflow.py
qa/comfyui-vnccs/: _vnccs_helpers.py  conftest.py  playbook.md  test_character_readonly_commands.py  test_character_readonly_integration.py  test_check_commands.py  test_check_integration.py  test_clothing_emotion_readonly_commands.py  test_clothing_emotion_readonly_integration.py  test_config_pose_commands.py  test_config_pose_integration.py  test_dataset_preview_commands.py  test_dataset_preview_integration.py  test_extra_model_paths_commands.py  test_wave2_submission_commands.py  test_wave3_destructive_commands.py  test_workflow_helpers_commands.py
skill-repo/: .gitignore  registry.json
skill-repo/comfyui-vnccs/scripts/: pyproject.toml  vnccs_cli.py
skill-repo/comfyui-vnccs/scripts/vnccs_cli/: __init__.py  __main__.py  backend.py  character.py  check.py  clothing.py  config.py  dataset.py  emotion.py  pose.py  sprite.py
skill-repo/comfyui-vnccs/scripts/vnccs_cli/commands/: __init__.py  character_clone.py  character_create.py  character_list.py  character_prune.py  character_show.py  check_all.py  check_models.py  check_nodes.py  clothing_add.py  clothing_list.py  clothing_pick.py  clothing_remove.py  config_show.py  dataset_export.py  dataset_preview.py  emotion_add.py  emotion_list.py  emotion_preview.py  emotion_show.py  pose_list.py  sprite_render.py
skill-repo/comfyui-vnccs/scripts/workflows/: README.md  VN_Step1.1_QWEN_Clone_Existing_Character_v1.json  VN_Step1_QWEN_CharSheetGenerator_v1.json  VN_Step2_QWEN_ClothesGenerator_v1.json  VN_Step3_QWEN_EmotionStudio_V1.json  VN_Step4_CharSpriteCreatorV5.json  VN_Step5_LoraDataSetGeneratorV5.json
skill-repo/comfyui-vnccs/scripts/workflows/V1SDXL/: VN_Step1_CharSheetGenerator_v5.json  VN_Step2_ClothesChanger_v5.json  VN_Step3_CharEmotionGeneratorV6.json
skill-repo/comfyui-vnccs/scripts/workflows/api/: VN_Step1.1_QWEN_Clone_Existing_Character_v1_api.json  VN_Step1_QWEN_CharSheetGenerator_v1_api.json  VN_Step2_QWEN_ClothesGenerator_v1_api.json  VN_Step3_QWEN_EmotionStudio_V1_api.json  VN_Step4_CharSpriteCreatorV5_api.json  VN_Step5_LoraDataSetGeneratorV5_api.json
skill-repo/comfyui-vnccs/scripts/workflows/api/V1SDXL/: VN_Step1_CharSheetGenerator_v5_api.json  VN_Step2_ClothesChanger_v5_api.json  VN_Step3_CharEmotionGeneratorV6_api.json
skill-repo/comfyui/scripts/: comfyui_cli.py  pyproject.toml
skill-repo/comfyui/scripts/comfyui_cli/: __init__.py  __main__.py  assets_input.py  assets_output.py  backend.py  custom_nodes.py  model.py  queue_cmd.py  server.py  workflow.py  ws_client.py
skill-repo/comfyui/scripts/comfyui_cli/commands/: custom_nodes_install.py  custom_nodes_list.py  custom_nodes_remove.py  custom_nodes_update.py  info.py  input_list.py  input_upload.py  model_find.py  model_list.py  output_download.py  output_show.py  ping.py  queue_cancel.py  queue_clear.py  queue_free.py  queue_list.py  queue_status.py  queue_submit.py  queue_wait.py  workflow_extract.py  workflow_run.py  workflow_set.py  workflow_validate.py
skill-repo/qwen3-tts/scripts/: pyproject.toml  qwen3_tts_cli.py
skill-repo/qwen3-tts/scripts/qwen3_tts_cli/: __init__.py  __main__.py  backend.py  clone.py  design.py  finetune.py  generate.py  info.py
skill-repo/qwen3-tts/scripts/qwen3_tts_cli/commands/: clone_text.py  design_text.py  finetune_generate.py  finetune_prepare.py  finetune_train.py  generate_text.py  info_device.py  info_languages.py  info_speakers.py
skill-repo/yt-dlp/scripts/: pyproject.toml  yt_dlp_cli.py
skill-repo/yt-dlp/scripts/yt_dlp_cli/: __init__.py  __main__.py  backend.py  batch.py  config.py  download.py  info.py  process.py
skill-repo/yt-dlp/scripts/yt_dlp_cli/commands/: __init__.py  batch_from_file.py  batch_search.py  batch_sync.py  config_archive.py  config_cookies.py  download_audio.py  download_channel.py  download_playlist.py  download_video.py  info_formats.py  info_metadata.py  info_search.py  info_subtitles.py  info_thumbnails.py  process_chapters.py  process_embed.py  process_remux.py  process_sponsorblock.py  search_providers.py
tests/: test_cli.py  test_ffmpeg_skill.py  test_filelock.py  test_installer.py  test_integration.py  test_log.py  test_registry.py
(+328 files in other folders)
