[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cli-me"
version = "0.1.0"
description = "Agent-native skills for GUI software — build, install, and evolve Claude Code skills"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
    "filelock>=3.13.0",
]

[project.scripts]
clime = "cli_me.main:main"
"cli-me" = "cli_me.main:main"

[tool.hatch.build.targets.wheel]
packages = ["cli_me"]

[tool.pytest.ini_options]
testpaths = ["tests", "qa"]
markers = [
    "command_graph: Tier 1 — tests command construction (no binary needed)",
    "integration: Tier 2 — tests against real binary (skips if missing)",
    "manual: Tier 3 — requires human review (skip in CI)",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
