[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cli-me"
version = "0.1.0"
description = "Agent-native skills for GUI software — build, install, and evolve Claude Code skills"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
    "filelock>=3.13.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "huggingface-hub>=1.11.0",
    "pillow>=12.3.0",
]

[project.scripts]
clime = "cli_me.main:main"
"cli-me" = "cli_me.main:main"

[tool.hatch.build.targets.wheel]
packages = ["cli_me"]

[tool.pytest.ini_options]
testpaths = ["tests", "qa"]
# importlib mode lets pytest collect same-named test modules across subdirs
# (qa/<skill>/test_commands.py) without requiring __init__.py — and without
# the sys.path collisions that __init__.py would create (e.g. qa/pyannote
# shadowing the installed pyannote package).
addopts = ["--import-mode=importlib"]
markers = [
    "command_graph: Tier 1 — tests command construction (no binary needed)",
    "integration: Tier 2 — tests against real binary (skips if missing)",
    "manual: Tier 3 — requires human review (skip in CI)",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
]
