[project]
name = "cli-me-knowledge-base"
version = "0.1.0"
description = "Knowledge base for cli-me skill building - two-tier wiki (process meta + per-skill)"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.29",
    "python-dotenv>=1.0.0",
    "tzdata>=2024.1",
]

[tool.ruff]
line-length = 100
