[project]
name = "comfyui-vnccs-cli"
version = "0.1.0"
description = "Agent-native CLI for the ComfyUI_VNCCS visual novel character pipeline"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.scripts]
vnccs-cli = "vnccs_cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vnccs_cli"]
