[project]
name = "comfyui-cli"
version = "0.1.0"
description = "Agent-native CLI for ComfyUI"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "websocket-client>=1.8.0",
    "pillow>=10.0.0",
]

[project.scripts]
comfyui-cli = "comfyui_cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
]
