[project]
name = "qwen3-tts-cli"
version = "0.1.0"
description = "Agent-native CLI for Qwen3-TTS"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
    "qwen-tts>=0.1.0",
    "torch>=2.0.0",
    "soundfile>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qwen3_tts_cli"]
