[project]
name = "yt-dlp-cli"
version = "0.1.0"
description = "Agent-native CLI for yt-dlp"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
]

[project.scripts]
yt-dlp-cli = "yt_dlp_cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
